# app/Http/Resources/AddressResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class AddressResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'address'=>$this->address,
+            'postal_code'=>$this->postal_code,
+            'lat'=>$this->lat,
+            'lang'=>$this->lang,
+        ];
+    }
+}
